# src/main/java/com/aleksi/mtg/MtgController.java
@@ -3,9 +3,15 @@ package com.aleksi.mtg;
 import jakarta.servlet.http.HttpSession;
 import org.SwaggerCodeGenExample.api.CardApi;
 import org.SwaggerCodeGenExample.model.*;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.mongodb.repository.config.EnableMongoRepositories;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
+
+@EnableMongoRepositories
 @CrossOrigin
 @RestController
 @RequestMapping("/api/v1")
@@ -13,6 +19,8 @@ public class MtgController implements CardApi {
 
     private final MtgService mtgService;
 
+    @Autowired
+    private ShortCardRepository shortCardRepository;
     public MtgController( MtgService mtgService) {
         this.mtgService = mtgService;
     }
@@ -28,6 +36,15 @@ public class MtgController implements CardApi {
     @GetMapping("/firstHint")
     public ResponseEntity<Hint> getFirstHint(){
         Hint response = mtgService.getFirstHint();
+        return ResponseEntity.ok(response);
+    }
+
+    @GetMapping("/search-cards")
+    public ResponseEntity<SearchCardsResponse> searchCards(@RequestParam String name) {
+        PageRequest pageRequest = PageRequest.of(0,20); //limit to 20 results
+        List<SearchCardsResponseContentInner> cardPage = shortCardRepository.findByNameContainingIgnoreCase(name,pageRequest);
+        SearchCardsResponse response = new SearchCardsResponse();
+        response.setContent(cardPage);
         return ResponseEntity.ok(response);
     }
     @GetMapping("/card")
